Updated Report - Updated Chapter 4

--- a/report/dynamcis_based_imitation.tex
+++ b/report/dynamcis_based_imitation.tex
@@ -196,7 +196,7 @@ feedback from both human and humanoid robot needs to be taken into account. This
 carried out for humanoid control for motion imitation using Stack of Tasks (SoT).
 
 \subsection{Balance Control}
-
+\label{sec: balance-control}
 \subsubsection{CoM Retargetting}
 
 To track the Centre of Mass (CoM) of the human actor, an implementation from \cite{penco:hal-01895145} is adapted to track the normalized offset on
