--- a/report/experimental_setup.tex
+++ b/report/experimental_setup.tex
@@ -1,5 +1,5 @@
 \chapter{Expermental Setup}
-
+\label{chapter-5}
 
 \section{Proposed Setup}
 
@@ -15,6 +15,7 @@ as well as processing the human data. In this case, the single support is initia
 \end{figure}
 
 \section{NAO robot platform}
+
 
 NAO is a programmable, autonomous, 57 cm tall humanoid robot developed by Aldebaran Robotics, a French startup company. The biped is equipped with several
 different sensors, including an inertial measurement unit with accelerometer, gyrometer and four ultrasonic sensors that provide NAO with stability and 
