--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -205,3 +205,13 @@ Robotics}. The balancing constraint of the robot is controlled using an Hierachi
 simulation and real robot.
 
 \section{Thesis Organisation}
+
+
+The chapters of the thesis are organized as follows. Chapter \ref{chapter-2} introduces the generalities of humanoid robotics and presents
+the state of the art in the control and balance of this type of robots. The existing works on motion retargetting involving dynamics are also 
+discussed. Chapter \ref{chapter-3} presents the mathematical requirements for the motion imitation problem. The approaches for CoM and ZMP
+retargetting are also explained in this chapter. Posture Control during motion imitation using multiple double inverted pendulums are proposed.
+Chapter \ref{chapter-4} presents the essential concepts of hierrachical quadratic programming (HQP) and presents the tuned approach for
+retargetting problem. Chapter \ref{chapter-5} describes the environmental setup of the proposed system. Information on Xsens and NAOqi are 
+detailed in this chapter. Chapter \ref{chapter-6} details the implementation of HQP and their corresponding results. The final chapter 7 
+concludes the overall work, discussion and the future scope of the thesis.
