--- a/report/thesisfront.tex
+++ b/report/thesisfront.tex
@@ -29,7 +29,7 @@
 	
 	Selvakumar Hastham Sathiya Satchi Sadanandam \lskip
 	
-	On 17 May 2021 \lskip\lskip
+	On 23 July 2021 \lskip\lskip
 	
 	{\Large \textbf{Realtime human motion imitation by humanoid robot with balance constraint}}
 	
@@ -43,8 +43,8 @@
 
 \begin{tabular}{p{3cm}p{5cm}p{7cm} }
  % President: & Name & Position (Institution) \\ & & \\     % for final defense only (not bibliography)
- Evaluators: & Dr. Olivier Kermognant & Assistant Professor (LS2N, ECN) \\
-	      & Dr. Christine Chevallereau & Position (Institution) \\ 
+ Evaluators: & Dr. Olivier Kermognant & Associate Professor (LS2N, ECN) \\
+	      & Dr. Christine Chevallereau & Director of Research, IRCCyN, CNRS \\ 
 % 	      & Name & Position (Institution) \\ & & \\  & & \\ 
   Supervisor(s):  & Dr. Sophie Sakka & Assistant Professor (LS2N, ECN) \\
 % EMARO students only
