--- a/report/state_of_the_art.tex
+++ b/report/state_of_the_art.tex
@@ -1,5 +1,5 @@
 \chapter{State of the Art}
-
+\label{chapter-2}
 
 The research and interest in humanoid robotics has greatly increased over the last few years, but inspite of the current
 abundance of the humanoid robots, their utility is still very limited. One of the most important trials, \textit{DARPA 
