Updated Report - Updated Chapter 6

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -490,3 +490,12 @@ and Khatib, Oussama},
   year         = {2010},
   organization = {IEEE}
 }
+
+
+@inproceedings{scaling-human-nao,
+  title        = {Using human motion to control the humanoid robot NAO},
+  author       = {D. Cehajic},
+  journal    = {Master Thesis},
+  year         = {2012},
+  organization = {Ecole Centrale de Nantes}
+}
