--- a/report/report.tex
+++ b/report/report.tex
@@ -117,13 +117,25 @@ UDP & User Datagram Protocol \\
 \listoftables
  
 
- 
- \include{introduction.tex}
+
+\include{introduction.tex}
+\newpage
+
 \include{state_of_the_art.tex}
+\newpage
+
 \include{dynamcis_based_imitation.tex}
+\newpage
+
 \include{task_specification.tex}
+\newpage
+
 \include{experimental_setup.tex}
+\newpage
+
 \include{implementation.tex}
+\newpage
+
 \include{conclusion.tex}
  
  
