--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -173,11 +173,14 @@ cannot stay at right frame and hence moved to the center of the feet. A threshol
 \section{Robot Control}
 
 For the robot control part, the program is developed with the possiblity of extending as an application to the NAO community. The data received from 
-Xsens is processed and sent to the robot control for motion imitation. A flowchart of the program is shown on Figure \ref{fig: flowchart-robot-control}.
+Xsens is processed and sent to the robot control for motion imitation. 
+% A flowchart of the program is shown on Figure \ref{fig: flowchart-robot-control}.
 
-\begin{figure}[h!]
-    \centering
-    \includegraphics[scale=0.5]{images/flowchart-block-diagram.png}\hfill
-    \caption{Block Diagram Representation of Imitation Program}\hfill
-    \label{fig: flowchart-robot-control}
-\end{figure}
+% \begin{figure}[h!]
+%     \centering
+%     \includegraphics[scale=0.5]{images/flowchart-block-diagram.png}\hfill
+%     \caption{Block Diagram Representation of Imitation Program}\hfill
+%     \label{fig: flowchart-robot-control}
+% \end{figure}
+
+More information and discussion will be added on the final version of the report.
